// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Eyebrow should render "contained" to match snapshot 1`] = `
<span
  className="eyebrow contained primary"
>
  <span
    className="label"
  >
    Contained Eyebrow
  </span>
</span>
`;

exports[`Eyebrow should render "outlined" to match snapshot 1`] = `
<span
  className="eyebrow outlined primary"
>
  <span
    className="label"
  >
    Contained Eyebrow
  </span>
</span>
`;
